// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ReadoutDisplay > matches snapshot when primary is false 1`] = `
<DocumentFragment>
  .c0 {
  align-items: stretch;
  background-color: rgb(230, 230, 230);
  border-radius: 3px;
  color: rgb(0, 0, 0);
  display: flex;
  flex: 1 1 300px;
  flex-direction: column;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  margin: 4px;
}

.c0:first-child:last-child {
  flex-grow: 0;
}

.c0:first-child:last-child >* {
  text-align: center;
}

.c0:first-child:last-child >* >:first-child {
  padding-left: 0;
}

@media all and (max-width: 1000px) {
  .c0 {
    flex: 0 0 100%;
    order: 1;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;

exports[`ReadoutDisplay > matches snapshot when primary is true 1`] = `
<DocumentFragment>
  .c0 {
  align-items: stretch;
  background-color: rgb(51, 51, 51);
  border-radius: 3px;
  color: rgb(255, 255, 255);
  display: flex;
  flex: 1 1 300px;
  flex-direction: column;
  font-family: Metropolis,-apple-system,BlinkMacSystemFont,"Segoe UI","Roboto","Oxygen","Ubuntu","Cantarell","Fira Sans","Droid Sans","Helvetica Neue",sans-serif;
  margin: 0;
}

.c0:first-child:last-child {
  flex-grow: 0;
}

.c0:first-child:last-child >* {
  text-align: center;
}

.c0:first-child:last-child >* >:first-child {
  padding-left: 0;
}

@media all and (max-width: 1000px) {
  .c0 {
    flex: 0 0 100%;
    order: 0;
  }
}

<div
    class="c0"
  />
</DocumentFragment>
`;
